--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -5,7 +5,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<PublishSingleFile>true</PublishSingleFile>
+    <PublishSingleFile>true</PublishSingleFile>
+    <BaseOutputPath>../Build/Example/Bin/</BaseOutputPath>
+    <BaseIntermediateOutputPath>../Build/Example/Obj/</BaseIntermediateOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
